--- a/app/views/game_templates/paper.html.erb
+++ b/app/views/game_templates/paper.html.erb
@@ -1,37 +1,71 @@
-<a href="/rock">
-  <i class="far fa-hand-rock fa-fw"></i>
-
-  Play Rock
-</a>
-
-<a href="/paper">
-  <i class="far fa-hand-paper fa-fw"></i>
-
-  Play Paper
-</a>
-
-<a href="/scissors">
-  <i class="far fa-hand-scissors fa-fw"></i>
-
-  Play Scissors
-</a>
-
-<h2>We played paper!</h2>
-
-<p>
-  <i class="far fa-hand-paper fa-10x"></i>
-</p>
-
-<h2>They played <%= @comp_move %>!</h2>
-
-<p>
-  <i class="far fa-hand-<%= @comp_move %> fa-10x"></i>
-</p>
-
-<h2>
-  We <%= @outcome %>!
-</h2>
-
-<a href="/rules">
-  Rules
-</a>
+<div class="container pt-5 text-center">
+  <div class="row mb-3">
+    <div class="col-4">
+      <%= render("game_templates/cell_one.html.erb") %>
+    </div>
+    
+    <div class="col-4">
+      <a href="/paper" class="btn btn-info btn-block">
+        <i class="far fa-hand-paper fa-fw"></i>
+      
+        Play Paper
+      </a>
+    </div>
+    
+    <div class="col-4">
+      <a href="/scissors"class="btn btn-outline-info btn-block">
+        <i class="far fa-hand-scissors fa-fw"></i>
+      
+        Play Scissors
+      </a>
+    </div>
+  </div>
+  
+  <div class="row">
+    <div class="col-6">
+      <div class="card border-success mb-3">
+        <div class="card-header">Header</div>
+        <div class="card-body text-success">
+          <h5 class="card-title">
+            We played paper!
+          </h5>
+          <p class="card-text">
+            <i class="far fa-hand-paper fa-10x"></i>
+          </p>
+        </div>
+      </div>
+    </div>
+    
+    <div class="col-6">
+      <div class="card border-danger mb-3">
+        <div class="card-header">Header</div>
+        <div class="card-body text-danger">
+          <h5 class="card-title">
+            They played <%= @comp_move %>!
+          </h5>
+          <p class="card-text">
+            <i class="far fa-hand-<%= @comp_move %> fa-10x"></i>
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="row">
+    <div class="col-12">
+      <div class="alert alert-danger" role="alert">
+        <h2>
+          We <%= @outcome %>!
+        </h2>
+      </div>
+    </div>
+  </div>
+  
+  <div class="row">
+    <div class="col-12">
+      <a href="/rules">
+        Rules
+      </a>
+    </div>
+  </div>
+</div>
