--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,8 @@
     <!-- Make it responsive to small screens -->
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
     <!-- END BOOTSTRAP -->
+  
+    <link rel="stylesheet" href="/bootstrap.css">
   </head>
 
   <body>
